--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <header>
         <div class="logo-area">
-            <img src="https://i.ibb.co/CrctJD8/118978623-2778991805677543-3562927143875430984-n.jpg" alt="Athang Logo" style="height: 80px; margin-bottom: 10px;">
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/CrctJD8/118978623-2778991805677543-3562927143875430984-n.jpg" alt="Athang Logo" style="height: 80px; margin-bottom: 10px;">
             <h1>Athang Fashion Gallery</h1>
             <p class="location-tag">Bangalore • Lalbarra</p>
         </div>
